<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.janeandgraham</groupId>
    <artifactId>asystem</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>

    <prerequisites>
        <maven>3.3</maven>
    </prerequisites>

    <scm>
        <connection>scm:git:git@github.com:ggear/asystem.git</connection>
        <url>scm:git:git@github.com:ggear/asystem.git</url>
        <developerConnection>scm:git:git@github.com:ggear/asystem.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/content/groups/cloudera-repos</url>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>cloudera-framework</id>
            <url>http://52.63.86.162:80/artifactory/libs-release-local</url>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>cloudera-framework-plugins</id>
            <url>http://52.63.86.162:80/artifactory/plugins-release-local</url>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/content/groups/cloudera-repos</url>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <properties>

        <maven.test.skip>false</maven.test.skip>
        <maven.integration-test.skip>true</maven.integration-test.skip>
        <maven.data-download.skip>true</maven.data-download.skip>
        <maven.package.skip>true</maven.package.skip>
        <maven.install.skip>true</maven.install.skip>

        <slf4j.version>1.7.5</slf4j.version>
        <junit.version>4.12</junit.version>

        <cloudera-framework.version>1.5.1-cdh5.9.0-SNAPSHOT</cloudera-framework.version>

        <parcel-plugin.version>0.7.8</parcel-plugin.version>

        <java.version>1.7</java.version>
        <scala.version>2.10</scala.version>

        <os-platform.version />

        <project.runtime.heap.max>1024</project.runtime.heap.max>
        <project.runtime.perm.heap.max>256</project.runtime.perm.heap.max>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>

    <profiles>
        <profile>
            <id>CMP</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
                <maven.integration-test.skip>true</maven.integration-test.skip>
                <maven.data-download.skip>true</maven.data-download.skip>
                <maven.package.skip>true</maven.package.skip>
                <maven.install.skip>true</maven.install.skip>
            </properties>
        </profile>
        <profile>
            <id>BLD</id>
            <properties>
                <maven.test.skip>false</maven.test.skip>
                <maven.integration-test.skip>false</maven.integration-test.skip>
                <maven.data-download.skip>true</maven.data-download.skip>
                <maven.package.skip>true</maven.package.skip>
                <maven.install.skip>true</maven.install.skip>
            </properties>
        </profile>
        <profile>
            <id>PKG</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
                <maven.integration-test.skip>true</maven.integration-test.skip>
                <maven.data-download.skip>true</maven.data-download.skip>
                <maven.package.skip>false</maven.package.skip>
                <maven.install.skip>true</maven.install.skip>
            </properties>
        </profile>
        <profile>
            <id>ALL</id>
            <properties>
                <maven.test.skip>false</maven.test.skip>
                <maven.integration-test.skip>false</maven.integration-test.skip>
                <maven.data-download.skip>false</maven.data-download.skip>
                <maven.package.skip>false</maven.package.skip>
                <maven.install.skip>false</maven.install.skip>
            </properties>
        </profile>
    </profiles>

    <modules>
        <module>asystem-amodel</module>
        <module>asystem-anode</module>
        <module>asystem-arouter</module>
        <module>asystem-ahub</module>
        <module>asystem-aweb</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.cloudera.parcel</groupId>
                    <artifactId>cloudera-parcel-plugin</artifactId>
                    <version>${parcel-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.github.klieber</groupId>
                    <artifactId>phantomjs-maven-plugin</artifactId>
                    <version>0.7</version>
                </plugin>
                <plugin>
                    <groupId>com.github.searls</groupId>
                    <artifactId>jasmine-maven-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.groovy.maven</groupId>
                    <artifactId>gmaven-plugin</artifactId>
                    <version>1.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-eclipse-plugin</artifactId>
                    <version>2.10</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                    <configuration>
                        <preparationGoals>clean install</preparationGoals>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.10.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-invoker-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <argLine>
                            -Xmx${project.runtime.heap.max}m
                            -XX:MaxPermSize=${project.runtime.perm.heap.max}m
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
